syntax = "proto3";
service BankService {
    rpc GetUserBankInfo (PhoneNum) returns (UserBankInfo) {}
    // rpc RequestLoanOptions (Person_Info) returns () {}
}
message Empty {}

message PhoneNum {
    string phoneNum = 1;
}

message UserBankInfo {
    string fname = 1;
    string lname = 2;
    string gender = 3;
    string address = 4;
    string phoneNum = 5;
    string dob = 6;
    string adharNum = 7;
    string panNum = 8;
    string accountNum = 9;
    string ifscCode = 10;
    string accountType = 11;
    string bankStatement = 12;
}

message Explore_Info {
    string id = 1;
    string fname = 2;
    string lname = 3;
    string phoneNum = 4;
    int32 score10 = 5;
    int32 score12 = 6;
    int32 estimatedAmount = 7;
    string collegeName = 8;
}

message LoanOption {
    float interest_rate = 1;
    int32 duration = 2;
    int32 colatral = 3;

}
